--- a/styles/FooterComponent.module.css
+++ b/styles/FooterComponent.module.css
@@ -1,3 +1,12 @@
 .footer {
     min-height: 85px;
 }
+
+.cusNavlink {
+    color: #212529;
+}
+
+.cusNavlink:hover {
+background-color: #212529;
+color: #f8f9fa;
+}
